--- a/src/styles/Recipes.css
+++ b/src/styles/Recipes.css
@@ -9,10 +9,10 @@ h2{
     margin: 10px;
     letter-spacing: 1px;
   }
-  h2::first-letter{
-      /* first letter of every h2 will be cornflowerblue */
+  /* h2::first-letter{
+      /* first letter of every h2 will be cornflowerblue 
    color: cornflowerblue;
-  }
+  } */
   .order-list{
       /* set the orderlist to display none  untill its trigger the other class order-list-reveal by changing the state in react*/
     display: none;
@@ -65,6 +65,49 @@ h2{
     transition:1s; 
     position:absolute;
   }
+
+
+  .loading {  
+    /* loading animation so its spins until the data is fetched by the API from the Yummly database */
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  
+  }
+  .loading div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    top: 260px;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    animation: loading 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: rgb(100, 149, 237) transparent transparent transparent;
+  }
+  .loading div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .loading div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .loading div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes loading {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+
+  
   /* mobile screens */
   @media (max-width:803px) {
     
