--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ body {
 }
 .alert-btn{
   float: right;
- font-size: 3rem;
+ font-size: 2.4rem;
  margin:4px 20px 0 0;
   border: none;
   outline: none;
@@ -39,5 +39,23 @@ body {
   transition: .5s;
  
 }
+.footer-container{
+  background-color: black;
+  width: 100%;
+  padding: 20px;
+  position:fixed;
+  bottom: 0;
+  color: white;
+  text-align: center;
+
+}
+.a-footer{
+  text-decoration: none;
+  color: white;
+}
+.a-footer:hover{
+  color: cornflowerblue;
+}
+
 
 
